# Gemmini_cmodel

./: .clang-format  .gitignore  CMakeLists.txt  README.md
config/: pe_test_config.yaml  systolic_config.yaml
docs/: pe_design.md  pe_design_cn.md  sparta.md  sparta_tut.md  systolic_array_cn.md
include/gemmini/: gemmini.hpp  matrix.hpp  matrix_multiplier.hpp  pe.hpp  systolic_array.hpp
src/: gemmini.cpp  main.cpp
src/execute/: matrix.hpp  matrix_multiplier.cpp  matrix_multiplier.hpp  pe.cpp  pe.hpp  systolic_array.cpp  systolic_array.hpp
src/gemmini/: gemmini.cpp  matrix_multiplier.cpp  pe.cpp  systolic_array.cpp
src/tests/: fifo_test.cpp  pe_gtest.cpp  systolic_array_gtest.cpp
src/utils/: common.hpp  fifo.hpp
